- follow/unfollow alignment fix in mixes and djs pages - Create mix btn bug is fixed in my mixes page

--- a/public/stylesheets/coke_messenger/messenger.css
+++ b/public/stylesheets/coke_messenger/messenger.css
@@ -360,3 +360,4 @@ h3.busq_titulo{font-size:18px;color:#343434;width:48%;float:left;padding-left:5p
 .gender_class{ color: #979797; font-size: 12px; padding-bottom: 10px; }
 .gender_div{ padding-bottom: 10px; }
 .create_mix_btn{ float: right;  margin: 10px 15px 10px 28px;}
+.follow_unfollow_btns{ margin-top:12px;}
